# sphinxcontrib-cjkspacer

./: .buildinfo  .gitignore  .python-versions  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  tox.ini
.github/workflows/: main.yml
_sources/: index.rst.txt
_static/: custom.css
doctrees/: environment.pickle  index.doctree
html/: .buildinfo  search.html  searchindex.js
sphinxcontrib/: cjkspacer.py
tests/: conf.py  index.rst
tests/_static/: custom.css
