[tool.poetry]
name = "sphinxcontrib-cjkspacer"
version = "0.4.4"
description = "Sphinx \"cjkspacer\" extension"
authors = ["tatsushi-ikeda <ikeda.tatsushi.37u@kyoto-u.jp>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sphinxcontrib" },
]
homepage = "http://pypi.python.org/pypi/sphinxcontrib-cjkspacer"
repository = "https://github.com/tatsushi-ikeda/sphinxcontrib-cjkspacer"
keywords = ["Sphinx", "Spacing", "Japanese"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Natural Language :: Japanese",
]

[tool.poetry.dependencies]
python = "*"
sphinx = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
